syntax = "proto3";

option csharp_namespace = "gRPC.Blazor.Server.Proto";
import "google/protobuf/timestamp.proto"; 

service WeatherForecasts { 
	rpc GetWeatherStream(WeatherRequest) returns (stream WeatherReply); 
	rpc GetWeather(WeatherRequest) returns (WeatherReply);
} 

message WeatherRequest{
	int32 loops =1;
	int32 timeOut =2;
	int32 noOfRecordsPerLoop = 3;
}
message WeatherReply { 
	repeated WeatherForecast forecasts = 1; 
} 

message WeatherForecast { 
	google.protobuf.Timestamp dateTimeStamp = 1; 
	int32 temperatureC = 2; 
	string summary = 3; 
}